// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`should insert 3 replies and retrieve 2 conversations 1`] = `
[
  {
    "completion_tokens": null,
    "config": "pierre-ia.org",
    "content": "Qui es-tu ?",
    "conv_id": "id_1",
    "cus_comment": null,
    "cus_satisfaction": null,
    "ext_comment": null,
    "ext_satisfaction": null,
    "model": "openai('gpt-4o-mini-2024-07-18')",
    "org_comment": null,
    "org_satisfaction": null,
    "prompt_tokens": null,
    "role": "user",
    "timestamp": "2012-11-10T09:08:07Z",
    "total_tokens": null,
  },
  {
    "completion_tokens": null,
    "config": "pierre-ia.org",
    "content": "Je suis Pierre !",
    "conv_id": "id_1",
    "cus_comment": null,
    "cus_satisfaction": null,
    "ext_comment": null,
    "ext_satisfaction": null,
    "model": "openai('gpt-4o-mini-2024-07-18')",
    "org_comment": null,
    "org_satisfaction": null,
    "prompt_tokens": null,
    "role": "assistant",
    "timestamp": "2012-11-10T09:08:07Z",
    "total_tokens": null,
  },
]
`;

exports[`should insert 3 replies and retrieve 2 conversations 2`] = `
[
  {
    "completion_tokens": null,
    "config": "pierre-ia.org",
    "content": "Bonjour",
    "conv_id": "id_2",
    "cus_comment": null,
    "cus_satisfaction": null,
    "ext_comment": null,
    "ext_satisfaction": null,
    "model": "openai('gpt-4o-mini-2024-07-18')",
    "org_comment": null,
    "org_satisfaction": null,
    "prompt_tokens": null,
    "role": "user",
    "timestamp": "2012-11-10T09:08:07Z",
    "total_tokens": null,
  },
]
`;

exports[`should score 2 conversations for customer + organization + external 1`] = `
[
  {
    "completion_tokens": null,
    "config": "pierre-ia.org",
    "content": "Qui es-tu ?",
    "conv_id": "id_1",
    "cus_comment": "C'est nul pour le Customer",
    "cus_satisfaction": 0,
    "ext_comment": null,
    "ext_satisfaction": null,
    "model": "openai('gpt-4o-mini-2024-07-18')",
    "org_comment": "C'est 1 pour l'Organization",
    "org_satisfaction": 1,
    "prompt_tokens": null,
    "role": "user",
    "timestamp": "2012-11-10T09:08:07Z",
    "total_tokens": null,
  },
  {
    "completion_tokens": null,
    "config": "pierre-ia.org",
    "content": "Je suis Pierre !",
    "conv_id": "id_1",
    "cus_comment": "C'est nul pour le Customer",
    "cus_satisfaction": 0,
    "ext_comment": null,
    "ext_satisfaction": null,
    "model": "openai('gpt-4o-mini-2024-07-18')",
    "org_comment": "C'est 1 pour l'Organization",
    "org_satisfaction": 1,
    "prompt_tokens": null,
    "role": "assistant",
    "timestamp": "2012-11-10T09:08:07Z",
    "total_tokens": null,
  },
]
`;

exports[`should score 2 conversations for customer + organization + external 2`] = `
[
  {
    "completion_tokens": null,
    "config": "pierre-ia.org",
    "content": "Bonjour",
    "conv_id": "id_2",
    "cus_comment": null,
    "cus_satisfaction": null,
    "ext_comment": "C'est 2 pour l'External",
    "ext_satisfaction": 2,
    "model": "openai('gpt-4o-mini-2024-07-18')",
    "org_comment": null,
    "org_satisfaction": null,
    "prompt_tokens": null,
    "role": "user",
    "timestamp": "2012-11-10T09:08:07Z",
    "total_tokens": null,
  },
]
`;

exports[`should insert 2 replies (from 1 conversation) and delete this conversation 1`] = `
[
  {
    "completion_tokens": null,
    "config": "pierre-ia.org",
    "content": "Conv 3_1",
    "conv_id": "id_3",
    "cus_comment": null,
    "cus_satisfaction": null,
    "ext_comment": null,
    "ext_satisfaction": null,
    "model": "openai('gpt-4o-mini-2024-07-18')",
    "org_comment": null,
    "org_satisfaction": null,
    "prompt_tokens": null,
    "role": "user",
    "timestamp": "2012-11-10T09:08:07Z",
    "total_tokens": null,
  },
  {
    "completion_tokens": null,
    "config": "pierre-ia.org",
    "content": "Conv 3_2",
    "conv_id": "id_3",
    "cus_comment": null,
    "cus_satisfaction": null,
    "ext_comment": null,
    "ext_satisfaction": null,
    "model": "openai('gpt-4o-mini-2024-07-18')",
    "org_comment": null,
    "org_satisfaction": null,
    "prompt_tokens": null,
    "role": "assistant",
    "timestamp": "2012-11-10T09:08:07Z",
    "total_tokens": null,
  },
]
`;

exports[`should insert 2 replies (from 1 conversation) and delete this conversation 2`] = `
{
  "changes": 2,
  "lastInsertRowid": 0,
}
`;

exports[`should retrieve all conversations 1`] = `
[
  {
    "completion_tokens": null,
    "config": "pierre-ia.org",
    "content": "Qui es-tu ?",
    "conv_id": "id_1",
    "cus_comment": "C'est nul pour le Customer",
    "cus_satisfaction": 0,
    "ext_comment": null,
    "ext_satisfaction": null,
    "model": "openai('gpt-4o-mini-2024-07-18')",
    "org_comment": "C'est 1 pour l'Organization",
    "org_satisfaction": 1,
    "prompt_tokens": null,
    "role": "user",
    "timestamp": "2012-11-10T09:08:07Z",
    "total_tokens": null,
  },
  {
    "completion_tokens": null,
    "config": "pierre-ia.org",
    "content": "Je suis Pierre !",
    "conv_id": "id_1",
    "cus_comment": "C'est nul pour le Customer",
    "cus_satisfaction": 0,
    "ext_comment": null,
    "ext_satisfaction": null,
    "model": "openai('gpt-4o-mini-2024-07-18')",
    "org_comment": "C'est 1 pour l'Organization",
    "org_satisfaction": 1,
    "prompt_tokens": null,
    "role": "assistant",
    "timestamp": "2012-11-10T09:08:07Z",
    "total_tokens": null,
  },
  {
    "completion_tokens": null,
    "config": "pierre-ia.org",
    "content": "Bonjour",
    "conv_id": "id_2",
    "cus_comment": null,
    "cus_satisfaction": null,
    "ext_comment": "C'est 2 pour l'External",
    "ext_satisfaction": 2,
    "model": "openai('gpt-4o-mini-2024-07-18')",
    "org_comment": null,
    "org_satisfaction": null,
    "prompt_tokens": null,
    "role": "user",
    "timestamp": "2012-11-10T09:08:07Z",
    "total_tokens": null,
  },
]
`;
